src/test/resources/plang-strict/parse-error/006_vardecl_nocomma2.plang
**#Missing comma between declaration blocks
**FirstErrorLoc:6,9
program vardecl_nocomma_2
    Változók:
        x, y: Egész
        e: Egész
    x := 1
    y := 2
    e := 5
program_vége
